# fastapi-base

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml  test_main.http
app/: config.py  main.py
app/api/v1/: auth.py  users.py
app/core/: security.py  types.py
app/db/: init_db.py  reset_db.py  session.py
app/models/: user.py
app/repositories/: user.py
app/schemas/: user.py
docker/app/: Dockerfile
tests/: conftest.py
tests/api/: test_auth.py
tests/core/: test_security.py
tests/repositories/: test_user_repository.py
tests/schemas/: test_user_schema.py
